# hummingbird-hologram

./: .gitignore  CLAUDE.md  CMakeLists.txt  build.sh
buildroot-external/: Config.in  external.desc  external.mk
buildroot-external/configs/: hologram_defconfig
docs/shader-references/: README.md
docs/superpowers/plans/: 2026-03-27-layer-system.md
docs/superpowers/specs/: 2026-03-26-layer-system-design.md
examples/hello-world/: CMakeLists.txt  build.sh  main.c
examples/python-version/: audio.py  config.py  main.py  model.py  renderer.py  requirements.txt  todo.md
scripts/: S99hologram  screenshot.sh
shaders/: blit.frag  blur.frag  bright_extract.frag  composite.frag  debug_bars.frag  debug_bars.vert  fullscreen.vert  particles.frag  particles.vert  scene.frag  scene.vert
src/: audio.c  audio.h  layer.h  layer_debug_audio.c  layer_debug_audio.h  layer_hummingbird.c  layer_hummingbird.h  layer_particles.c  layer_particles.h  main.c  model.c  model.h  platform.h  renderer.c  renderer.h  shader.c  shader.h  stb_impl.c
